[ci] Use existing wrapper classes instead of newing them